--- a/src/gui/Menu.fxml
+++ b/src/gui/Menu.fxml
@@ -3,20 +3,19 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.paint.LinearGradient?>
-<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-
-<fx:root prefHeight="244.0" prefWidth="471.0" type="GridPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root prefHeight="345.0" type="GridPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <rowConstraints>
-      <RowConstraints maxHeight="62.13333740234375" minHeight="50.0" prefHeight="62.13333740234375" />
-      <RowConstraints minHeight="15.0" />
+      <RowConstraints maxHeight="62.13333740234375" minHeight="15.0" />
+      <RowConstraints maxHeight="62.13333740234375" minHeight="40.0" prefHeight="40.0" />
+      <RowConstraints minHeight="50.0" />
       <RowConstraints minHeight="30.0" prefHeight="50.0" />
       <RowConstraints minHeight="30.0" prefHeight="50.0" />
       <RowConstraints minHeight="30.0" prefHeight="50.0" />
@@ -26,59 +25,31 @@
       <ColumnConstraints halignment="CENTER" minWidth="470.0" prefWidth="470.0" />
    </columnConstraints>
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="153.0" opacity="0.57" strokeLineCap="ROUND" strokeType="INSIDE" strokeWidth="3.0" width="305.0" GridPane.rowIndex="3">
-         <stroke>
-            <LinearGradient endX="0.4431818615306508" endY="0.6628787887818886" startX="0.2878788023283988" startY="0.3674242893854777">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color red="0.800000011920929" green="0.6133333444595337" />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="0.8631578683853149" green="0.7256920337677002" blue="0.45076024532318115" />
-                     </color>
-                  </Stop>
-               </stops>
-            </LinearGradient>
-         </stroke>
-         <fill>
-            <LinearGradient endX="0.4431818615306508" endY="0.6628787887818886" startX="0.2878788023283988" startY="0.3674242893854777">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color red="0.800000011920929" green="0.6133333444595337" />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="0.8842105269432068" green="0.6384327411651611" blue="0.10807017236948013" />
-                     </color>
-                  </Stop>
-               </stops>
-            </LinearGradient>
-         </fill>
-      </Rectangle>
-      <Label contentDisplay="CENTER" text="-- Splendor --">
+      <ImageView fitHeight="333.0" fitWidth="341.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="3">
+         <image>
+            <Image url="@../../../../../../../../../Desktop/splendor.jpg" />
+         </image>
+      </ImageView>
+      <Label contentDisplay="CENTER" text="-- Splendor --" textFill="WHITE" GridPane.rowIndex="1">
          <font>
-            <Font name="GothicI" size="33.0" />
+            <Font name="GothicI" size="30.0" />
          </font>
       </Label>
-      <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="240.0" text="Applicatie stoppen" GridPane.rowIndex="4">
+      <Button fx:id="btnStoppen" disable="true" mnemonicParsing="false" onAction="#btnApplicatieStoppenClicked" prefHeight="26.0" prefWidth="240.0" text="Applicatie stoppen" GridPane.rowIndex="5">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
       </Button>
-      <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="240.0" text="Speler aanmelden" GridPane.rowIndex="2">
+      <Button fx:id="btnAanmelden" disable="true" mnemonicParsing="false" onAction="#btnSpelerAanmeldenClicked" prefHeight="26.0" prefWidth="240.0" text="Speler aanmelden" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
       </Button>
-      <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="240.0" text="Spel starten" GridPane.rowIndex="3">
+      <Button fx:id="btnStarten" disable="true" mnemonicParsing="false" onAction="#btnSpelStartenClicked" prefHeight="26.0" prefWidth="240.0" text="Spel starten" GridPane.rowIndex="4">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
       </Button>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="187.0" stroke="#fffbfb" strokeType="INSIDE" strokeWidth="3.0" width="314.0" GridPane.rowIndex="4" />
    </children>
 </fx:root>
