--- a/src/gui/Start.fxml
+++ b/src/gui/Start.fxml
@@ -1,7 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<fx:root type = "AnchorPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
 
-</fx:root>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="547.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <ImageView fx:id="BGImage" fitHeight="612.0" fitWidth="626.0" layoutX="-9.0" layoutY="-25.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../Desktop/splendor.jpg" />
+         </image>
+      </ImageView>
+      <Rectangle fx:id="kader" arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="525.0" layoutX="33.0" layoutY="26.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="5.0" width="541.0" />
+      <Button fx:id="btnSpelen" layoutX="188.0" layoutY="363.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="233.0" text="Spelen">
+         <font>
+            <Font size="30.0" />
+         </font>
+      </Button>
+      <Text fx:id="titelSpel" fill="WHITE" layoutX="80.0" layoutY="286.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Splendor" textAlignment="CENTER" wrappingWidth="446.19054412841797">
+         <font>
+            <Font name="Oriya MN" size="96.0" />
+         </font>
+      </Text>
+   </children>
+</AnchorPane>
