--- a/src/gui/Aanmelden.fxml
+++ b/src/gui/Aanmelden.fxml
@@ -1,7 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<fx:root type = "GridPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
-
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="399.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <ImageView fitHeight="403.0" fitWidth="405.0" layoutX="-1.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../../../../../Desktop/splendor.jpg" />
+         </image>
+      </ImageView>
+      <Label layoutX="36.0" layoutY="156.0" text="Gebruikersnaam" textFill="WHITE">
+         <font>
+            <Font name="RomanC" size="14.0" />
+         </font>
+      </Label>
+      <TextField layoutX="202.0" layoutY="153.0" />
+      <TextField layoutX="202.0" layoutY="189.0" />
+      <Label layoutX="39.0" layoutY="191.0" prefHeight="20.0" prefWidth="134.0" text="Geboortejaar" textFill="WHITE">
+         <font>
+            <Font name="RomanC" size="14.0" />
+         </font>
+      </Label>
+      <Button layoutX="202.0" layoutY="267.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0" text="Log in" />
+   </children>
 </fx:root>
