--- a/src/gui/Menu.fxml
+++ b/src/gui/Menu.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -11,45 +12,58 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<fx:root prefHeight="345.0" type="GridPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="586.0" prefWidth="600.0" type="GridPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <rowConstraints>
-      <RowConstraints maxHeight="62.13333740234375" minHeight="15.0" />
+      <RowConstraints maxHeight="62.13333740234375" minHeight="75.0" />
       <RowConstraints maxHeight="62.13333740234375" minHeight="40.0" prefHeight="40.0" />
       <RowConstraints minHeight="50.0" />
-      <RowConstraints minHeight="30.0" prefHeight="50.0" />
-      <RowConstraints minHeight="30.0" prefHeight="50.0" />
-      <RowConstraints minHeight="30.0" prefHeight="50.0" />
+      <RowConstraints maxHeight="1.7976931348623157E308" minHeight="80.0" prefHeight="80.0" />
+      <RowConstraints maxHeight="1.7976931348623157E308" minHeight="80.0" prefHeight="80.0" />
+      <RowConstraints maxHeight="1.7976931348623157E308" minHeight="80.0" prefHeight="80.0" />
+      <RowConstraints maxHeight="10.0" minHeight="0.0" prefHeight="0.0" />
       <RowConstraints minHeight="15.0" />
    </rowConstraints>
    <columnConstraints>
-      <ColumnConstraints halignment="CENTER" minWidth="470.0" prefWidth="470.0" />
+      <ColumnConstraints halignment="CENTER" />
    </columnConstraints>
    <children>
-      <ImageView fitHeight="333.0" fitWidth="341.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="3">
+      <ImageView fitHeight="659.0" fitWidth="602.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="4">
          <image>
             <Image url="@../../../../../../../../../Desktop/splendor.jpg" />
          </image>
       </ImageView>
-      <Label contentDisplay="CENTER" text="-- Splendor --" textFill="WHITE" GridPane.rowIndex="1">
+      <Label contentDisplay="CENTER" text="Splendor" textFill="WHITE" GridPane.rowIndex="1">
          <font>
-            <Font name="GothicI" size="30.0" />
+            <Font name="GothicI" size="60.0" />
          </font>
+         <effect>
+            <DropShadow />
+         </effect>
       </Label>
-      <Button fx:id="btnAppStoppen" mnemonicParsing="false" onAction="#btnAppStoppenClicked" prefHeight="26.0" prefWidth="240.0" text="Applicatie stoppen" GridPane.rowIndex="5">
+      <Button fx:id="btnAppStoppen" mnemonicParsing="false" onAction="#btnAppStoppenClicked" prefHeight="44.0" prefWidth="315.0" text="Applicatie stoppen" GridPane.rowIndex="5">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
+         <font>
+            <Font size="20.0" />
+         </font>
       </Button>
-      <Button fx:id="btnSpelerAanmelden" mnemonicParsing="false" onAction="#btnSpelerAanmeldenClicked" prefHeight="26.0" prefWidth="240.0" text="Speler aanmelden" GridPane.rowIndex="3">
+      <Button fx:id="btnSpelerAanmelden" mnemonicParsing="false" onAction="#btnSpelerAanmeldenClicked" prefHeight="52.0" prefWidth="315.0" text="Speler aanmelden" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
+         <font>
+            <Font size="25.0" />
+         </font>
       </Button>
-      <Button fx:id="btnSpelStarten" mnemonicParsing="false" onAction="#btnSpelStartenClicked" prefHeight="26.0" prefWidth="240.0" text="Spel starten" GridPane.rowIndex="4">
+      <Button fx:id="btnSpelStarten" mnemonicParsing="false" onAction="#btnSpelStartenClicked" prefHeight="52.0" prefWidth="315.0" text="Spel starten" GridPane.rowIndex="4">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
+         <font>
+            <Font size="25.0" />
+         </font>
       </Button>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="187.0" stroke="#fffbfb" strokeType="INSIDE" strokeWidth="3.0" width="314.0" GridPane.rowIndex="4" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" blendMode="OVERLAY" fill="#1f93ff00" height="500.0" stroke="#fffbfb" strokeType="INSIDE" strokeWidth="3.0" width="494.0" GridPane.rowIndex="4" />
    </children>
 </fx:root>
