--- a/src/gui/Aanmelden.fxml
+++ b/src/gui/Aanmelden.fxml
@@ -6,27 +6,30 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="399.0" type="AnchorPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="586.0" prefWidth="600.0" type="AnchorPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="403.0" fitWidth="405.0" layoutX="-1.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="602.0" fitWidth="614.0" layoutX="-1.0" layoutY="-8.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../../../../../../Desktop/splendor.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="36.0" layoutY="156.0" text="Gebruikersnaam" textFill="WHITE">
+      <Rectangle fx:id="kader" arcHeight="5.0" arcWidth="5.0" blendMode="OVERLAY" fill="#1f93ff00" height="504.0" layoutX="56.0" layoutY="41.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="5.0" width="488.0" />
+      <Label fx:id="lblGebruikersnaam" layoutX="160.0" layoutY="156.0" text="Gebruikersnaam" textFill="WHITE">
          <font>
             <Font name="RomanC" size="14.0" />
          </font>
       </Label>
-      <TextField layoutX="202.0" layoutY="153.0" />
-      <TextField layoutX="202.0" layoutY="189.0" />
-      <Label layoutX="39.0" layoutY="191.0" prefHeight="20.0" prefWidth="134.0" text="Geboortejaar" textFill="WHITE">
+      <TextField fx:id="txfGebruikersnaam" layoutX="316.0" layoutY="153.0" />
+      <TextField fx:id="txfGeboortjaar" layoutX="316.0" layoutY="188.0" />
+      <Label fx:id="lblGeboortejaar" layoutX="162.0" layoutY="191.0" prefHeight="20.0" prefWidth="134.0" text="Geboortejaar" textFill="WHITE">
          <font>
             <Font name="RomanC" size="14.0" />
          </font>
       </Label>
-      <Button layoutX="202.0" layoutY="267.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0" text="Log in" />
+      <Button fx:id="btnLogIn" layoutX="316.0" layoutY="267.0" mnemonicParsing="false" onAction="#btnLogInClicked" prefHeight="25.0" prefWidth="149.0" text="Log in" />
+      <Button fx:id="btnTerug" layoutX="162.0" layoutY="267.0" mnemonicParsing="false" onAction="#btnTerugClicked" prefHeight="26.0" prefWidth="134.0" text="Terug" />
    </children>
 </fx:root>
