--- a/src/gui/Menu.fxml
+++ b/src/gui/Menu.fxml
@@ -29,7 +29,7 @@
    <children>
       <ImageView fx:id="BGImage" fitHeight="659.0" fitWidth="602.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="4">
          <image>
-            <Image url="@../../../../../../../../../Desktop/splendor.jpg" />
+            <Image url="@../images/splendor.jpg" />
          </image>
       </ImageView>
       <Rectangle fx:id="kader" arcHeight="5.0" arcWidth="5.0" blendMode="OVERLAY" fill="#1f93ff00" height="500.0" stroke="#fffbfb" strokeType="INSIDE" strokeWidth="5.0" width="494.0" GridPane.rowIndex="4" />
