--- a/src/gui/SpelStarten.fxml
+++ b/src/gui/SpelStarten.fxml
@@ -1,7 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<fx:root type = "GridPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
-
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="586.0" prefWidth="600.0" type="AnchorPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <ImageView fitHeight="603.0" fitWidth="606.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/splendor.jpg" />
+         </image>
+      </ImageView>
+      <Label layoutX="145.0" layoutY="51.0" text="Spel gestart" textFill="WHITE">
+         <font>
+            <Font name="GothicI" size="47.0" />
+         </font>
+         <effect>
+            <DropShadow />
+         </effect>
+      </Label>
+      <TextArea fx:id="txaSpelers" editable="false" layoutX="69.0" layoutY="233.0" prefHeight="311.0" prefWidth="463.0" />
+      <Label layoutX="184.0" layoutY="193.0" text="Met spelers:" textFill="#f5f2f2">
+         <font>
+            <Font name="RomanC" size="31.0" />
+         </font>
+      </Label>
+   </children>
 </fx:root>
