--- a/src/gui/Start.fxml
+++ b/src/gui/Start.fxml
@@ -13,7 +13,7 @@
    <children>
       <ImageView fx:id="BGImage" fitHeight="612.0" fitWidth="626.0" layoutX="-9.0" layoutY="-25.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../../../../Desktop/splendor.jpg" />
+            <Image url="@../images/splendor.jpg" />
          </image>
       </ImageView>
       <Rectangle fx:id="kader" arcHeight="5.0" arcWidth="5.0" blendMode="OVERLAY" fill="#1f93ff00" height="525.0" layoutX="33.0" layoutY="26.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="5.0" width="541.0" />
