--- a/src/gui/SpelStarten.fxml
+++ b/src/gui/SpelStarten.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.DropShadow?>
@@ -23,11 +24,12 @@
             <DropShadow />
          </effect>
       </Label>
-      <TextArea fx:id="txaSpelers" editable="false" layoutX="69.0" layoutY="233.0" prefHeight="311.0" prefWidth="463.0" />
       <Label layoutX="184.0" layoutY="193.0" text="Met spelers:" textFill="#f5f2f2">
          <font>
             <Font name="RomanC" size="31.0" />
          </font>
       </Label>
+      <Button fx:id="btnTerug" layoutX="269.0" layoutY="499.0" mnemonicParsing="false" onAction="#btnTerugClicked" prefHeight="25.0" prefWidth="62.0" text="Terug" />
+      <TextArea fx:id="txaSpelers" layoutX="69.0" layoutY="232.0" prefHeight="254.0" prefWidth="463.0" />
    </children>
 </fx:root>
