--- a/src/gui/Menu.fxml
+++ b/src/gui/Menu.fxml
@@ -57,7 +57,7 @@
             <Font size="25.0" />
          </font>
       </Button>
-      <Button fx:id="btnSpelStarten" focusTraversable="false" mnemonicParsing="false" onAction="#btnSpelStartenClicked" prefHeight="52.0" prefWidth="315.0" text="Spel starten" GridPane.rowIndex="4">
+      <Button fx:id="btnOverzichtSpelers" focusTraversable="false" mnemonicParsing="false" onAction="#btnOverzichtSpelersClicked" prefHeight="52.0" prefWidth="315.0" text="Overzicht spelers" GridPane.rowIndex="4">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
