--- a/src/gui/OverzichtSpelers.fxml
+++ b/src/gui/OverzichtSpelers.fxml
@@ -18,18 +18,13 @@
          </image>
       </ImageView>
       <Rectangle arcHeight="5.0" arcWidth="5.0" blendMode="OVERLAY" fill="#1f93ff00" height="512.0" layoutX="41.0" layoutY="37.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="5.0" width="520.0" />
-      <Label layoutX="145.0" layoutY="51.0" text="Spel gestart" textFill="WHITE">
+      <Label layoutX="77.0" layoutY="95.0" text="Overzicht Spelers" textFill="WHITE">
          <font>
             <Font name="GothicI" size="47.0" />
          </font>
          <effect>
             <DropShadow />
          </effect>
-      </Label>
-      <Label layoutX="184.0" layoutY="193.0" text="Met spelers:" textFill="#f5f2f2">
-         <font>
-            <Font name="RomanC" size="31.0" />
-         </font>
       </Label>
       <Button fx:id="btnTerug" layoutX="269.0" layoutY="499.0" mnemonicParsing="false" onAction="#btnTerugClicked" prefHeight="25.0" prefWidth="62.0" text="Terug" />
       <TextArea fx:id="txaSpelers" layoutX="69.0" layoutY="232.0" prefHeight="254.0" prefWidth="463.0" />
