--- a/src/gui/StartSpel.fxml
+++ b/src/gui/StartSpel.fxml
@@ -2,17 +2,22 @@
 
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.shape.Rectangle?>
 
-
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="586.0" prefWidth="600.0" type="BorderPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root fx:id="startSpel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="586.0" prefWidth="1000.0" type="BorderPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fx:id="BGImage" fitHeight="604.0" fitWidth="602.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" blendMode="OVERLAY" fill="#1f93ff00" height="512.0" layoutX="40.0" layoutY="37.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="5.0" />
+   </children>
+   <center>
+      <ImageView fitHeight="625.0" fitWidth="1083.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
          <image>
-            <Image url="@../images/splendor.jpg" />
+            <Image url="@../images/achtergrondSpelbord.jpg" />
          </image>
       </ImageView>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" blendMode="OVERLAY" fill="#1f93ff00" height="512.0" layoutX="40.0" layoutY="37.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="5.0" width="520.0" />
-   </children>
+   </center>
+   <left>
+      <AnchorPane blendMode="COLOR_BURN" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+   </left>
 </fx:root>
