--- a/src/gui/StartSpel.fxml
+++ b/src/gui/StartSpel.fxml
@@ -1,23 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.shape.Rectangle?>
 
-<fx:root fx:id="startSpel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="586.0" prefWidth="1000.0" type="BorderPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1400.0" type="AnchorPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" blendMode="OVERLAY" fill="#1f93ff00" height="512.0" layoutX="40.0" layoutY="37.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="5.0" />
-   </children>
-   <center>
-      <ImageView fitHeight="625.0" fitWidth="1083.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+      <ImageView fitHeight="838.0" fitWidth="1688.0" layoutX="-26.0" layoutY="-29.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/achtergrondSpelbord.jpg" />
          </image>
       </ImageView>
-   </center>
-   <left>
-      <AnchorPane blendMode="COLOR_BURN" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-   </left>
+      <SplitPane blendMode="COLOR_BURN" dividerPositions="0.29797979797979796" prefHeight="102.0" prefWidth="1398.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="193.0" prefWidth="418.0" />
+        </items>
+      </SplitPane>
+      <SplitPane blendMode="COLOR_BURN" dividerPositions="0.29797979797979796" layoutY="101.0" prefHeight="666.0" prefWidth="1400.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="518.0" prefWidth="541.0" />
+        </items>
+      </SplitPane>
+   </children>
 </fx:root>
