--- a/src/gui/StartSpel.fxml
+++ b/src/gui/StartSpel.fxml
@@ -40,7 +40,7 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <Button fx:id="btnVolgende" layoutX="211.0" layoutY="613.0" mnemonicParsing="false" onAction="#btnVolgendeClicked" prefHeight="38.0" prefWidth="198.0" text="Volgende">
+                  <Button fx:id="btnVolgende" disable="true" layoutX="211.0" layoutY="613.0" mnemonicParsing="false" onAction="#btnVolgendeClicked" prefHeight="38.0" prefWidth="198.0" text="Volgende">
                      <font>
                         <Font name="RomanC" size="20.0" />
                      </font>
