--- a/src/gui/StartSpel.fxml
+++ b/src/gui/StartSpel.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -20,15 +19,15 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TextField fx:id="txfSpelerNaam" alignment="CENTER" editable="false" layoutX="-102.0" layoutY="5.0" style="-fx-background-color: -fx-control-inner-background;">
+                  <Label fx:id="lblSpelerNaam" layoutX="70.0" layoutY="19.0" textFill="#8e0000">
                      <font>
                         <Font name="GothicI" size="49.0" />
                      </font>
-                  </TextField>
+                  </Label>
                </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="193.0" prefWidth="418.0">
                <children>
-                  <Label fx:id="lblRondeNr" layoutX="33.0" layoutY="18.0" text="Ronde" textFill="#8e0000">
+                  <Label fx:id="lblRondeNr" layoutX="33.0" layoutY="18.0" textFill="#8e0000">
                      <font>
                         <Font name="GothicI" size="49.0" />
                      </font>
